# pytest-ignore-flaky

./: .gitignore  .travis.yml  CHANGES  LICENSE  NEWS.rst  README.rst  dev-requirements.txt  dodo.py  pyproject.toml  pytest_ignore_flaky.py  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml  test.yml
docs/: index.rst
newsfragments/: 13.bugfix.rst
tests/: sample succeed.py  sample.py  test_functional.py
