[metadata]
name = pytest-ignore-flaky
description = ignore failures from flaky tests (pytest plugin)
long_description = file:README.rst
author = Eduardo Naufel Schettino, Marcos Alfredo Camargo Leal Pinto
author_email = schettino72@gmail.com, marcos.alfredo@gmail.com
maintainer = Jason R. Coombs
maintainer_email = jaraco@jaraco.com
url = https://github.com/coherent-oss/pytest-ignore-flaky
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Operating System :: OS Independent
  Operating System :: POSIX
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Topic :: Software Development :: Testing

[options]
py_modules = pytest_ignore_flaky
python_requires = >=3.8
install_requires =
  pytest>=6.0

[options.entry_points]
pytest11 = 
  pytest_ignore_flaxy = pytest_ignore_flaky
